# nerf-firmware

./: Cargo.toml  README.md
.cargo/: config.toml
avr-specs/: avr-atmega328p.json
src/: main.rs  panic.rs  print.rs  rev_motors.rs
src/ssd1306/: command.rs  mod.rs  ssd1306.rs
src/utils/: mod.rs  panic.rs  print.rs
